syntax = "proto3";
package sequencer;

option java_multiple_files = true;
option java_package = "xyz.funkybit.sequencer.proto";
option java_outer_classname = "BignumSchema";

message IntegerValue {
  bytes value = 1;
}

message DecimalValue {
  uint32 scale = 1;
  uint32 precision = 2;
  bytes value = 3;
}